# raytracinginoneweekend-hs

./: .gitignore  LICENSE  README.md  raytracinginoneweekend.cabal  shell.nix  stack.yaml  stack7.10.yaml  stack8.0.yaml
lib/RaytracingBook/: #Camera.hs#  #HitableList.hs#  #Lens.hs#  BVH.hs  Camera.hs  Hitable.hs  Monad.hs  Ray.hs  Sphere.hs  Texture.hs  Triangle.hs
lib/RaytracingBook/Import/: Obj.hs
src/: Benchmarks.hs  Main.hs
