name:                raytracinginoneweekend
version:             0.1.0.0
synopsis:            Ray Tracing in One Weekend
license:             BSD3
license-file:        LICENSE
author:              Timo von Holtz
maintainer:          tvh@tvholtz.de
copyright:           2016 Timo von Holtz
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  ghc-options:         -O2 -Wall
  build-depends:       base
                     , deepseq
                     , JuicyPixels
                     , lens
                     , linear
                     , mwc-random
                     , primitive
                     , resource-pool
                     , transformers
                     , vector
                     , vector-algorithms
                     , wavefront
  exposed-modules:     RaytracingBook.Ray
                     , RaytracingBook.BVH
                     , RaytracingBook.Camera
                     , RaytracingBook.Hitable
                     , RaytracingBook.Import.Obj
                     , RaytracingBook.Monad
                     , RaytracingBook.Sphere
                     , RaytracingBook.Texture
                     , RaytracingBook.Triangle
  default-language:    Haskell2010

executable rayer
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base
                     , JuicyPixels
                     , async-pool
                     , friday
                     , friday-devil
                     , friday-juicypixels
                     , ieee754
                     , lens
                     , linear
                     , mwc-random
                     , optparse-applicative
                     , raytracinginoneweekend
                     , stm
                     , transformers
                     , vector
                     , wavefront
  default-language:    Haskell2010

executable rayer-benchmarks
  hs-source-dirs:      src
  main-is:             Benchmarks.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base
                     , Xorshift128Plus
                     , criterion
                     , lens
                     , linear
                     , mersenne-random
                     , mersenne-random-pure64
                     , mwc-random
                     , raytracinginoneweekend
                     , vector
  default-language:    Haskell2010
